- Refactor: Unused PrecedentDegreeInformation slots cleanup

28.0.0 (24-02-2020)
- Refactor: Deprecated fixed state machines workflow cleanup (candidacies and registration states)

27.0.0 (20-02-2020)
- Refactor: Rename GradeScale relations to refer GradeScale entity instead of GradeScaleEnum

26.3.0 (19-02-2020)
- Refactor: Added methods for find ExecutionInterval chids, aggregators and calendars
- New Fixture: Model for grade scales as domain entities

26.2.4 (13-02-2020)
- Fix: Removed the check rules when a student statute is deleted
- Improvement: Added more information to user when a degree module has more than one credits limit for executionYear

26.2.3 (07-02-2020)
- Fix: Added  null slot check for first time candidacies

26.2.2 (07-02-2020)
- Refactor: New Registrations should create StudentCandidacy instances

26.2.1 (06-02-2020)
- Bug Fix: Enrolment evaluation should always return execution interval

26.2.0 (06-02-2020)
- Refactor: ExecutionInterval methos optimized due to relation with AcademicCalendarEntry
- Refactor: Removed deprecated Registration slots
- Refactor: Removed deprecated StudentCandidacy slots
- Refactor: StudentCandidacy is now a concrete class

26.1.0 (05-02-2020)
- Refactor: Replaced semester references by childOrder
- Refactor: Added domain relation between ExecutionInterval and AcademicCalendarEntry
- Refactor: Removed unecessary overriden method CompetenceCourseInformation.getAcademicPeriod()

26.0.0 (01-02-2020)
- Refactor: Removed ExecutionSemester entity
- Refactor: Removed temp data migration code
- Refactor: Replaced semester references by childOrder

25.9.2 (16-01-2020)
- Improvement: Registration active state takes into account the whole execution year

25.9.1 (13-01-2020)
- Fix: Possible ExecutionIntervals of Dismissals must be childs
- Refactor: Replace usage of ExecutionSemester.getSemester() to ExecutionSemester.getChildOrder()

25.9.0 (13-01-2020)