@@ -1,4 +1,5 @@
 - Refactor: Unused PrecedentDegreeInformation slots cleanup
+- Improvement: Added AcademicalInstitutionType to PrecedentDegreeInformation
 
 28.0.0 (24-02-2020)
 - Refactor: Deprecated fixed state machines workflow cleanup (candidacies and registration states)
